Link to contact details documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/contact-details">Contact details</a>
+      </h3>
+      <p>
+        Allow users to edit their contact details
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/iteration-aug-23">Iteration - 23 August</a>
       </h3>
       <p>
