Document course preview

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -45,6 +45,13 @@
       </p>
 
       <h3 class="heading-small">
+        <a href="/history/preview-course">Preview course</a>
+      </h3>
+      <p>
+        Screenshots showing different preview states depending on course type and state.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/needs-behind-fields">Fields we ask for and why</a>
       </h3>
       <p>
