Add words about previews

--- a/app/views/history/preview-course/index.html
+++ b/app/views/history/preview-course/index.html
@@ -12,6 +12,13 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>Screenshots showing different preview states based on type and completeness of course.</p>
+      <p>The <a href="https://github.com/fofr/manage-courses-prototype/blob/master/app/views/preview.html">prototype preview logic</a> may also help when building this.</p>
+    </div>
+  </div>
+
   {% set contents = [
     { text: 'Preview of fee paying course with all fields', id: 'preview-of-fee-paying-course-with-all-fields' },
     { text: 'Preview of fee paying course with only required fields', id: 'preview-of-fee-paying-course-with-only-required-fields' },
