Add preview section
Describe how org info can be previewed.

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -115,14 +115,13 @@
   {% endif %}
 
   {% if state == 'new' or state == 'draft' %}
-    {# <h3 class="heading-medium remove-top-margin">Preview</h3>
-    <p>Preview your information to check for mistakes before publishing.</p>
-    <a href="/preview/about-your-organisation">Preview</a>
+    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    <p>This information will show on all your courses.</p>
+    <p>Preview any course to see how it will look to applicants.</p>
 
-    <hr /> #}
+    <hr />
 
     <h3 class="heading-medium remove-top-margin">Publish</h3>
-    <p>This information will show on all your courses.</p>
     <p>Applicants will see published information from October.</p>
     <p>
       <a href="{{ publishLink }}" class="button">Publish</a>
