Add org page iteration

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -24,6 +24,13 @@
       </p>
 
       <h3 class="heading-small">
+        <a href="/history/organisation-iteration-aug-24">Iteration - 24 August</a>
+      </h3>
+      <p>
+        Split homepage into tasks, Step 1 and Step 2
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/iteration-aug-23">Iteration - 23 August</a>
       </h3>
       <p>
