--- a/app/views/includes/phase_banner_beta.html
+++ b/app/views/includes/phase_banner_beta.html
@@ -1,6 +1,6 @@
 <div class="phase-banner">
   <p>
-    <strong class="phase-tag">BETA</strong>
+    <strong class="phase-tag">Prototype</strong>
     <span>This is a prototype of a new service. Some parts of this prototype do not work yet.</span>
   </p>
 </div>
