--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-medium">September 2018</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/enrichment-sept-6">Enrichment release – 6 September</a>
+      </h3>
+      <p>
+        Publish courses, as it was released with the course enrichment feature.
+      </p>
+
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
