Add user needs from James's documentation
https://docs.google.com/document/d/1_NKoFszFPtsEQeIT1psSmAskVMqxgr3LE2tjj5weUuM/

--- a/app/views/history/needs-behind-fields.html
+++ b/app/views/history/needs-behind-fields.html
@@ -33,19 +33,29 @@
 
       <h3 class="heading-medium">Interview process (optional)</h3>
 
-      <p>Applicants need to know what to expect should they reach the interview process.</p>
+      <p>As an applicant I need to know what the interview process entails so that I can prepare accordingly and know what to expect.</p>
 
-      <p>Providers tell us that describing their interview process can discourage people from applying. <a href="https://lookback.io/watch/Psi3panxQDwkrXuwj?t=27m39s">Research with applicants</a> shows that the interview process can be a differentiator.</p>
+      <p>Applicants can be put off a provider because of the nature in which providers carry out their interview day. They’ve also talked about the anxiety they feel with not knowing about the interview process – to the extent of choosing not to go for the interview. <a href="https://lookback.io/watch/Psi3panxQDwkrXuwj?t=27m39s">Research with applicants</a> shows that the interview process can be a differentiator.</p>
+
+      <p>Some providers tell us that describing their interview process can discourage people from applying whilst other providers tell us that it is a good thing to describe it to reduce anxiety and arm the candidates with as much information as possible. </p>
 
       <p>There’s an open question: Is it better for users to know about the interview process, but risk getting fewer applications or is it better to omit interview details until after an application is made and hope more people apply? By making this field optional we give this choice to providers.</p>
+
+      <p>We should err on the side of the applicant. The field is currently optional, we may need to make it required.</p>
 
       <h3 class="heading-medium">How school placements work</h3>
 
       <p>Students will spend some of their time in placement schools. The variety of schools, the time spent in those schools, and when during the year they'll be at their placements varies between courses.</p>
 
-      <p>Applicants need to know how their placements will work, and what type of placement options are available to them should they choose that course.</p>
+      <p>As a potential trainee teacher I need to know the types of placement schools available, like pupil demographics or faith association, so that I can balance breadth of school experience with experience in a school where I’d want to work.</p>
+
+      <p>As a potential trainee teacher unwilling or unable to relocate I need a clear picture of travel time from my home to where I study and to where I train, so that I can choose a course with a manageable commute. I also need to know when during the year I will need to travel to a placement school so that I can plan accordingly.</p>
+
+      <p>As a potential trainee teacher I need to understand the time I’ll spend in a placement school classroom learning and teaching so that I can choose a course that improves my confidence levels.</p>
 
       <h2 class="heading-large">Course length, fees and salary</h2>
+
+      <p>As a potential trainee teacher I need to understand and compare my financial options so that I can afford to train to teach.</p>
 
       <h3 class="heading-medium">Fees for UK and EU students</h3>
 
@@ -77,9 +87,13 @@
 
       <p>Courses often require qualifications higher than the national minimum (eg they might need a 2:1 degree, or As in certain subjects at A level). Applicants need to know if they have the required qualifications before applying.</p>
 
+      <p>As a potential teacher I need to know what specific qualifications are needed by a provider so that I can apply for a course that I’m eligible for and not waste may time. </p>
+
       <h3 class="heading-medium">Personal qualities (optional)</h3>
 
       <p>A place for training providers to indicate the qualities or soft skills an applicant will need.</p>
+
+      <p>As a training provider I need to articulate to the potential teacher the personal qualities we are looking for so that I can select the best candidates.</p>
 
       <h3 class="heading-medium">Other requirements (optional)</h3>
 
@@ -95,6 +109,10 @@
 
       <p>Information about a provider will help applicants to differentiate courses when their location and financial needs are otherwise met.</p>
 
+      <p>As a training provider we need to sell ourselves so that we can attract and select the best candidates.</p>
+
+      <p>As a potential teacher, once other primary needs (location, finances) are satisfied I need to be able to select a provider on other merits that are preferable to me.</p>
+
       <h3 class="heading-medium">About your accredited provider (optional)</h3>
 
       <p>Or the QTS awarding body. Training providers have different relationships with their accredited providers. They can have 0, 1 or many accredited providers.</p>
@@ -105,9 +123,21 @@
 
       <p>If a training provider offers the same course through different accredited providers, applicants need to be able to choose between them.</p>
 
+      <p>As a potential teacher looking at school-led providers I need to know the awarding body so that I can choose a course that has a prestigious University attached to it.</p>
+
+      <p>Linked to following needs:</p>
+
+      <p>As a potential trainee teacher, I need to see how ‘good’ the training provider is, so that I can apply to more prestigious institutions to improve my career prospects on completion.</p>
+
+      <p>As a potential trainee teacher I need to understand how employable I’m likely to be after a course so that I can choose a course with the best career prospects.</p>
+
       <h3 class="heading-medium">Training with disabilities and other needs</h3>
 
       <p>Applicants with access needs need to know how a provider can accommodate those needs. We prompt providers to consider the range of needs and to give examples of how they’ve helped students in the past.</p>
+
+      <p>As a potential teacher with accessibility needs, I need to contact the ‘accessibility expert’ directly so that I can get reassurance that the provider is genuinely catering for my needs and not ticking policy boxes.</p>
+
+      <p>As a provider I need to communicate exactly how and to what extent we are provisioned for different accessibility needs, so that we attract potential teachers that we can cater for.</p>
     </div>
   </div>
 </main>
