Add screenshot of welcome email

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -23,6 +23,13 @@
         Publish courses, as it was released with the course enrichment feature.
       </p>
 
+      <h3 class="heading-small">
+        <a href="/history/welcome-email">Welcome email</a>
+      </h3>
+      <p>
+        The email we send when users first log in.
+      </p>
+
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
