Add screens of new and not yet running courses

--- a/app/views/history/enrichment-sept-6/index.html
+++ b/app/views/history/enrichment-sept-6/index.html
@@ -29,6 +29,8 @@
   {% set contents = [
     { text: 'Organisation', id: 'organisation' },
     { text: 'Course', id: 'course' },
+    { text: 'Course new and not yet running', id: 'course-new-not-yet-running' },
+    { text: 'Course not running', id: 'course-not-running' },
     { text: 'About this course', id: 'about-this-course' },
     { text: 'Fees and length', id: 'fees-and-length' },
     { text: 'Requirements and eligibility', id: 'requirements-and-eligibility' },
@@ -41,6 +43,10 @@
   {{ macros.screenshot('Organisation', 'organisation', '/public/images/history/enrichment-sept-6/thumbnails/01-organisation.png', '/public/images/history/enrichment-sept-6/01-organisation.png', '') }}
 
   {{ macros.screenshot('Course', 'course', '/public/images/history/enrichment-sept-6/thumbnails/02-course.png', '/public/images/history/enrichment-sept-6/02-course.png', '') }}
+
+  {{ macros.screenshot('Course new and not yet running', 'course-new-not-yet-running', '/public/images/history/enrichment-sept-6/thumbnails/01-course-new-not-yet-running.png', '/public/images/history/enrichment-sept-6/01-course-new-not-yet-running.png', '') }}
+
+  {{ macros.screenshot('Course not running', 'course-not-running', '/public/images/history/enrichment-sept-6/thumbnails/02-course-not-running.png', '/public/images/history/enrichment-sept-6/02-course-not-running.png', '') }}
 
   {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/enrichment-sept-6/thumbnails/03-about-this-course.png', '/public/images/history/enrichment-sept-6/03-about-this-course.png', '') }}
 
