--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">September 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/copy-content-from-another-course-live">Copy content from another course (Live version)</a>
+      </h3>
+      <p>
+        We changed this feature when we built it.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/enrichment-sept-6">Enrichment release – 6 September</a>
       </h3>
       <p>
