Fix typo in eligibility

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -124,7 +124,7 @@
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">
-              Requirements and eligbility
+              Requirements and eligibility
             </h3>
             <a class="course-part-task-action" href="{{ coursePath }}/requirements">Edit</a>
 
