--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -49,7 +49,7 @@
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">
-              Requirements and eligbility
+              Requirements and eligibility
             </h3>
             <a class="course-part-task-action" href="/template/{{ template.slug }}/requirements">Edit</a>
 
