--- a/app/views/history/enrichment-sept-6/index.html
+++ b/app/views/history/enrichment-sept-6/index.html
@@ -23,6 +23,19 @@
         <li>about your organisation <a href="/history/iteration-aug-23">layout improvements</a></li>
         <li>persistent validation on publish</li>
       </ul>
+
+      <h2 class="heading-large">User research</h2>
+
+      <p>After launch we tested this with providers:</p>
+
+      <ul class="list list-bullet">
+        <li><a href="https://lookback.io/watch/6Cxgfdd85cChDjSWT">Excalibur TSA</a></li>
+        <li><a href="https://lookback.io/watch/aEg6nx4WHpuwQjTJq">Learning Institute South West</a></li>
+        <li><a href="https://lookback.io/watch/2E4kE9niSMwCnRCiN">UCL (in-person)</a></li>
+        <li><a href="https://lookback.io/watch/c4ARA3fRWZvcnR2HE">North East Partnership SCITT</a></li>
+      </ul>
+
+      <p>Insights were recorded in <a href="https://docs.google.com/spreadsheets/d/1XJvy0mirMWdumDno05OsOEduU8_Gbbm6ta7ZQaMXJ9g/edit?ts=5b97f2af#gid=0">Google Sheets</a>.</p>
     </div>
   </div>
 
