Document moving copy content feature

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">September 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/copy-content-from-another-course-14-sept">Copy content from another course – Iteration 14 September</a>
+      </h3>
+      <p>
+        Make the copy feature easier to find.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/copy-content-from-another-course-live">Copy content from another course (Live version)</a>
       </h3>
       <p>
