Add another research session

--- a/app/views/history/enrichment-sept-6/index.html
+++ b/app/views/history/enrichment-sept-6/index.html
@@ -33,6 +33,7 @@
         <li><a href="https://lookback.io/watch/aEg6nx4WHpuwQjTJq">Learning Institute South West</a></li>
         <li><a href="https://lookback.io/watch/2E4kE9niSMwCnRCiN">UCL (in-person)</a></li>
         <li><a href="https://lookback.io/watch/c4ARA3fRWZvcnR2HE">North East Partnership SCITT</a></li>
+        <li><a href="https://lookback.io/watch/mFgLmxxqTEyGNF7pK">University of Hertfordshire</a></li>
       </ul>
 
       <p>Insights were recorded in <a href="https://docs.google.com/spreadsheets/d/1XJvy0mirMWdumDno05OsOEduU8_Gbbm6ta7ZQaMXJ9g/edit?ts=5b97f2af#gid=0">Google Sheets</a>.</p>
