--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-medium">October 2018</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/course-not-running-oct-15">Course statuses – Iteration 15 October 2018</a>
+      </h3>
+      <p>
+        We have uncovered more complexity around course statuses on UCAS.
+      </p>
+
       <h2 class="heading-medium">September 2018</h2>
 
       <h3 class="heading-small">
