--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -36,6 +36,54 @@
 
         <hr />
 
+        <h3 class="heading-large remove-top-margin">Outcome</h3>
+        <p>Pick the outcome which describes what a trainee will get when they complete this course.</p>
+
+        {% set fields = [
+            {
+              name: 'PGCE with QTS',
+              text: 'Postgraduate certificate in education with qualified teacher status'
+            },
+            {
+              name: 'QTS',
+              text: 'Qualified teacher status'
+            },
+            {
+              name: 'QTS with optional PGCE',
+              text: 'Qualified teacher status with optional postgraduate certificate in education'
+            }
+          ]
+        %}
+
+        {{ macros.radioGroup(course.programmeCode + '-outcome', fields, errors) }}
+
+        <details {% if data[course.programmeCode + '-outcome'] == 'PGDE with QTS' %}open{% endif %}>
+          <summary><span class="summary">More options</span></summary>
+          <div class="panel panel-border-narrow">
+            {% set fields = [
+                {
+                  name: 'PGDE with QTS',
+                  text: 'Postgraduate diploma in education with qualified teacher status'
+                },
+                {
+                  name: 'PGCE only (further education, without QTS)',
+                  text: 'Only applies to courses in further education'
+                },
+                {
+                  name: 'PGDE only (further education, without QTS)',
+                  text: 'Only applies to courses in further education'
+                }
+              ]
+            %}
+
+            {{ macros.radioGroup(course.programmeCode + '-outcome', fields, errors, 4) }}
+          </div>
+        </details>
+
+
+
+        <hr />
+
         <h3 class="heading-large remove-top-margin">Interview process</h3>
 
         <p>Give applicants a summary of the interview process.</p>
