--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">October 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/choose-outcome">Edit a course outcome</a>
+      </h3>
+      <p>
+        Allow providers to choose an outcome, instead of using our inferred one.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/course-not-running-oct-15">Course statuses – Iteration 15 October 2018</a>
       </h3>
       <p>
